added second line of story

--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
 <html>
     <body>
         <p> It was a dark and stormy night . . . </p>
+        <p> Well known drug lord Bazoozoo was on a late night run. </p>
     </body>
 </html>
