--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
     <body>
         <p> It was a dark and stormy night . . . </p>
         <p> Well known drug lord Bazoozoo was on a late night run. </p>
+        <p> A woman was out alone that night, too.</p>
     </body>
 </html>
