added fourth line

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
     <body>
         <p> It was a dark and stormy night . . . </p>
-        <p> Well known drug lord Bazoozoo was on a late night run. </p>
+        <p> King Bella the cat was out for a late night stroll. </p>
         <p> A woman was out alone that night, too.</p>
+        <p>King Bella saw the woman and asked her for a ride to Petsmart.</p>
     </body>
 </html>
