--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
         <p> King Bella the cat was out for a late night stroll. </p>
         <p> A woman was out alone that night, too.</p>
         <p>King Bella saw the woman and asked her for a ride to Petsmart.</p>
+        <p> Then they went to Petsmart and got hello kitty toys! </p>
     </body>
 </html>
